--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,9 @@
+@use "header";
+@use "main";
+@use "footer";
+@use "variables";
+
+
 *{
     margin: 0;
     padding: 0;
@@ -8,12 +14,12 @@
 --red-dark:#DD1711;
 --blue-smooth:#ACD9EB;
 --orange:#ff9f43;
---font-size
+--font-size:1.2rem;
 }
 
 body{
     width:100vw;
-    background-image: url(./images/fancy-pants.jpg);
+    background-image: url(../img/fancy-pants.jpg);
     background-size: cover;
     background-repeat: repeat;
     color: aliceblue;
