--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -16,6 +16,6 @@
 @mixin transparentheroes{
     height:70px;
     width:40px;
-    background-color: grey;
-    border-radius: 10%;
+    background-color:rgba(122, 122, 122, 0.31);
+        border-radius: 10%;
 }
