--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,18 @@ legend {
   margin-bottom: 6px;
 }
 
+main {
+  display: grid;
+  min-height: 100vh;
+  grid-template-columns: 65% auto auto;
+  grid-template-rows: auto 300px auto;
+}
+
+.welcome {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
 aside {
   display: flex;
   flex-flow: row nowrap;
@@ -53,6 +65,7 @@ aside {
   background-image: url(/img/WallpaperDog.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   margin-top: 35px;
   height: 400px;
 }
@@ -60,12 +73,20 @@ aside {
 .transparentheroes {
   height: 70px;
   width: 40px;
-  background-color: grey;
+  background-color: rgba(122, 122, 122, 0.31);
   border-radius: 10%;
-  margin-top: 25px;
+  margin: auto;
   height: 370px;
   display: block;
   width: 20%;
+}
+
+.lorem {
+  background-image: url(../img/fancy-pants.jpg);
+  height: 100px;
+  text-align: center;
+  padding-top: 20px;
+  margin-top: 25px;
 }
 
 :root {
