--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,3 +1,16 @@
 @import 'mixin';
 
 
+main{
+    display: grid;
+    min-height: 100vh;
+    grid-template-columns: 65% auto auto;
+    grid-template-rows: auto 300px auto;
+  }
+  
+.welcome{
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  
