--- a/scss/_aside.scss
+++ b/scss/_aside.scss
@@ -34,3 +34,17 @@ width:100vw;
     text-align: center;
     padding:5%;
 }
+
+// RESPONSIVE//
+
+@media screen and (max-width:768px) {
+        
+ 
+}
+
+
+
+@media screen and (min-width:769px) and (max-width:992px){
+
+   
+}
