--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,20 @@ h1 {
   font-family: "Press Start 2P", cursive;
 }
 
+.menuButton {
+  display: none;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #fff;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
 .menu {
   display: flex;
   flex-flow: row nowrap;
@@ -53,20 +67,12 @@ legend {
 }
 
 @media screen and (max-width: 768px) {
-  .menu {
-    margin: 0;
+  h1 {
+    font-size: 0.2em;
   }
-  .menu, nav > ul {
-    flex-direction: column;
-  }
-  .navbar__nav_ul {
-    padding-left: 10%;
-  }
-  .navbar__nav_ul > li {
-    margin-bottom: 20px;
-  }
-  .logo, nav {
-    width: 100%;
+  .logo {
+    width: 90%;
+    text-align: center;
   }
   .menuButton {
     display: block;
@@ -74,19 +80,14 @@ legend {
     left: 75%;
     top: 5%;
   }
-  nav {
+  legend, .red, .blue,
+  nav > ul > li > a {
     display: none;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 992px) {
-  .navbar {
-    flex-direction: column;
-  }
-  .logo, nav {
-    width: 100%;
-  }
-  .navbar__nav_ul {
-    justify-content: space-evenly;
+  h1 {
+    font-size: 0.5em;
   }
 }
 main {
@@ -183,6 +184,18 @@ h3 {
   height: 100%;
 }
 
+@media screen and (max-width: 768px) {
+  .maincontainer {
+    display: block;
+    margin: auto;
+  }
+  .welcome {
+    padding-left: 2px;
+  }
+  #welcome, #works, #products, #video, #youtube {
+    text-align: center;
+  }
+}
 aside {
   display: flex;
   flex-flow: row nowrap;
@@ -257,6 +270,17 @@ i {
   margin-top: 10px;
 }
 
+@media screen and (max-width: 768px) {
+  footer {
+    width: 100vw;
+    display: block;
+    margin: auto;
+    padding: 0 10px 0 10px;
+  }
+  .contact, .map, .formcontact, .widget {
+    margin: auto;
+  }
+}
 :root {
   --red-dark:#DD1711;
   --blue-smooth:#ACD9EB;
