--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -20,6 +20,19 @@ h1{
     font-family: "Press Start 2P", cursive;
 }
 
+.menuButton {
+    display:none;
+}
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #fff;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
 .menu{
     display: flex;
     flex-flow: row nowrap;
@@ -52,42 +65,35 @@ legend{
 // RESPONSIVE//
 
     @media screen and (max-width:768px) {
-        .menu {
-            margin:0;
+        
+        h1{
+            font-size: 0.2em;
+                   }
+
+        .logo{
+             width:90%;
+            text-align: center;
         }
-        .menu, nav>ul {
-            flex-direction: column;
-        }
-        .navbar__nav_ul{
-            
-            padding-left: 10%;
-        }
-        .navbar__nav_ul>li {
-            margin-bottom: 20px;
-        }
-        .logo, nav {
-            width:100%
-        }
+
         .menuButton{
             display: block;
             position: absolute;
             left:75%;
             top:5%;
         }
-        nav{
+
+        legend, .red, .blue,         
+        nav>ul>li>a  {
             display:none;
         }
-        
+         
     }
+
+
+
     @media screen and (min-width:769px) and (max-width:992px){
-        .navbar {
-            flex-direction: column;
-        }
-        .logo, nav {
-            width:100%
-        }
-        .navbar__nav_ul{
-            justify-content: space-evenly;
-    
+
+        h1{
+            font-size: 0.5em;
         }
     }
