--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@ header {
   background-image: url(../img/fancy-pants.jpg);
   display: flex;
   flex-flow: row nowrap;
-  box-shadow: 10px 10px 10px #0e0e0e;
+  -webkit-box-shadow: 0px 10px 8px -9px rgba(0, 0, 0, 0.78);
+  box-shadow: 0px 10px 8px -9px rgba(0, 0, 0, 0.78);
 }
 
 .logo {
@@ -11,8 +12,7 @@ header {
   text-align: center;
   margin-top: 15px;
 }
-
-h1 {
+.logo h1 {
   font-size: 1em;
   font-family: "Press Start 2P", cursive;
 }
@@ -67,22 +67,26 @@ legend {
 }
 
 @media screen and (max-width: 768px) {
+  header {
+    display: block;
+  }
   h1 {
     font-size: 0.2em;
   }
   .logo {
-    width: 90%;
+    width: 100%;
     text-align: center;
   }
   .menuButton {
     display: block;
     position: absolute;
-    left: 75%;
-    top: 5%;
+    left: 85%;
+    top: 3%;
   }
-  legend, .red, .blue,
-  nav > ul > li > a {
+  .menu {
     display: none;
+    width: 100%;
+    padding-left: 20%;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 992px) {
@@ -91,24 +95,22 @@ legend {
   }
 }
 main {
-  width: 100vw;
   margin: 25px auto auto auto;
 }
 
 .maincontainer {
   display: grid;
   grid-template-columns: 1fr 1fr 2fr;
-  grid-template-rows: 200px 300px;
-  gap: 25px;
+  grid-template-rows: 200px 250px;
+  gap: 20px;
   color: black;
   width: 90%;
-  margin: 0 0 25px 50px;
-  padding-bottom: 30px;
+  margin-left: 50px;
 }
 
 #welcome {
   grid-column: 1/2;
-  grid-row: 1/3;
+  grid-row: 1/4;
   border: 1px solid orange;
   padding-left: 7px;
   margin: 5px;
@@ -146,7 +148,7 @@ h3 {
 
 #works {
   grid-column: 2/3;
-  grid-row: 1/2;
+  grid-row: 1/4;
 }
 
 #products {
@@ -155,7 +157,7 @@ h3 {
 }
 
 #video {
-  grid-column: 3/3;
+  grid-column: 3/5;
   grid-row: 1/3;
 }
 
@@ -196,6 +198,29 @@ h3 {
     text-align: center;
   }
 }
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  .maincontainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 2fr;
+    grid-template-rows: 250px 200px;
+  }
+  #welcome {
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+  #works {
+    grid-column: 1/3;
+    grid-row: 3/4;
+  }
+  #products {
+    grid-column: 3/5;
+    grid-row: 3/4;
+  }
+  #video {
+    grid-column: 3/5;
+    grid-row: 1/3;
+  }
+}
 aside {
   display: flex;
   flex-flow: row nowrap;
@@ -221,8 +246,7 @@ aside {
 .lorem {
   display: flex;
   background-image: url(../img/fancy-pants.jpg);
-  margin: 25px auto auto auto;
-  width: 100vw;
+  margin: 35px auto auto auto;
 }
 
 .loremp {
@@ -248,7 +272,7 @@ h4 {
 }
 
 i {
-  margin-right: 15px;
+  padding-right: 15px;
 }
 
 .country {
@@ -257,8 +281,7 @@ i {
 }
 
 .map {
-  display: flex;
-  flex-flow: column nowrap;
+  display: block;
 }
 
 .formcontact {
@@ -272,13 +295,17 @@ i {
 
 @media screen and (max-width: 768px) {
   footer {
-    width: 100vw;
     display: block;
-    margin: auto;
     padding: 0 10px 0 10px;
   }
-  .contact, .map, .formcontact, .widget {
-    margin: auto;
+}
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    padding-left: 5px;
+    column-gap: 50px;
   }
 }
 :root {
@@ -290,7 +317,6 @@ i {
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
