--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -17,7 +17,7 @@ h4{
 }
 
 i{
-    margin-right: 15px;
+    padding-right: 15px;
 }
 
 .country{
@@ -26,8 +26,7 @@ i{
 }
 
 .map{
-    display: flex;
-    flex-flow: column nowrap;
+    display: block;
 }
 
 .formcontact{
@@ -45,22 +44,21 @@ i{
 @media screen and (max-width:768px) {
         
  footer{
-    width: 100vw;
+    
     display:block;
-    margin: auto;
     padding: 0 10px 0 10px;
  }
-
- .contact, .map, .formcontact, .widget{
-    margin:auto;
-    
- }
-
 }
-
 
 
 @media screen and (min-width:769px) and (max-width:992px){
 
-   
+footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+        padding-left: 5px;
+column-gap:50px;
+    
+}
 }
