--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,7 +5,8 @@ header{
     background-image: url(../img/fancy-pants.jpg);
     display:flex;
     flex-flow: row nowrap;
-    box-shadow:  10px 10px 10px #0e0e0e,          
+    -webkit-box-shadow: 0px 10px 8px -9px rgba(0,0,0,0.78); 
+    box-shadow: 0px 10px 8px -9px rgba(0,0,0,0.78);        
 }
 
 .logo{
@@ -13,12 +14,13 @@ display: block;
 width: 20%;
 text-align: center;
 margin-top: 15px;
-}
-
 h1{
     font-size: 1em;
     font-family: "Press Start 2P", cursive;
 }
+}
+
+
 
 .menuButton {
     display:none;
@@ -66,27 +68,32 @@ legend{
 
     @media screen and (max-width:768px) {
         
+       header{
+        display: block;
+       }
         h1{
             font-size: 0.2em;
                    }
 
         .logo{
-             width:90%;
+             width:100%;
             text-align: center;
         }
 
         .menuButton{
             display: block;
             position: absolute;
-            left:75%;
-            top:5%;
+            left:85%;
+            top:3%;
         }
 
-        legend, .red, .blue,         
-        nav>ul>li>a  {
+        .menu{
             display:none;
+            width: 100%;
+            padding-left: 20%;
         }
-         
+      
+        
     }
 
 
