--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2,7 +2,6 @@
 
 
 main{
-  width:100vw;
   margin: 25px auto auto auto;
   
 }
@@ -10,18 +9,18 @@ main{
 .maincontainer{
     display: grid;
     grid-template-columns: 1fr 1fr 2fr;
-    grid-template-rows: 200px 300px;
-    gap: 25px;
+    grid-template-rows: 200px 250px;
+    gap: 20px;
     color: black; 
     width: 90%;
-    margin:0 0 25px 50px;
-    padding-bottom: 30px;
+    margin-left: 50px;
+   
  
   }
   
 #welcome{
     grid-column: 1/2;
-    grid-row: 1/3;
+    grid-row: 1/4;
     border:1px solid orange;
     padding-left: 7px;
     margin: 5px;
@@ -56,7 +55,7 @@ main{
 
   #works{
     grid-column: 2/3;
-    grid-row: 1/2;
+    grid-row: 1/4;
   }
 
   #products{
@@ -65,7 +64,7 @@ main{
   }
 
   #video{
-    grid-column: 3/3;
+    grid-column: 3/5;
     grid-row: 1/3;
   }
 
@@ -99,7 +98,6 @@ main{
 @media screen and (max-width:768px) {
  
   
- 
  .maincontainer{
   display: block;
   margin:auto;
@@ -117,4 +115,34 @@ main{
 
 }
 
+@media screen and (min-width:769px) and (max-width:992px){
 
+
+  .maincontainer{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 2fr;
+    grid-template-rows: 250px 200px;
+  
+}
+
+  #welcome{
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+
+  #works{
+    grid-column: 1/3;
+    grid-row: 3/4;
+  }
+
+  #products{
+    grid-column: 3/5;
+    grid-row: 3/4;
+  }
+
+  #video{
+    grid-column: 3/5;
+    grid-row: 1/3;
+  }
+
+}
